--- a/jbang/spring-boot-jpa-vue/index-fetch.html
+++ b/jbang/spring-boot-jpa-vue/index-fetch.html
@@ -4,7 +4,7 @@
         <title>Person CRUD Application</title>
         <style>
             body {
-                font-family: Arial, sans-serif;
+                font-family: -apple-system,"Segoe UI",Helvetica,Arial,sans-serif;
                 margin: 0;
                 padding: 0;
                 background-color: #f5f5f5;
@@ -96,7 +96,7 @@
                 font-weight: bold;
             }
         </style>
-        <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.prod.js"></script>
     </head>
     <body>
         <div id="app">
