--- a/spring-boot/bookstore/src/main/resources/static/index.html
+++ b/spring-boot/bookstore/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
         <li><a href="./api/users">/api/users</a></li>
         <li><a href="./api/orders">/api/orders</a></li>
         <li><a href="./api/authors">/api/authors</a></li>
-        <li><a href="./api/books">/api/books</a></li>
+        <li><a href="./api/books/summaries">/api/books/summaries</a></li>
     </ul>
 </body>
 </html>
