--- a/spring-boot/bookstore/src/main/resources/static/index.html
+++ b/spring-boot/bookstore/src/main/resources/static/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookstore spring boot example application</title>
-</head>
-<body>
-    <h3>Bookstore</h3>
-    <ul>
-        <li><a href="./swagger-ui/index.html">/swagger-ui/index.html</a></li>
-        <li><a href="./actuator">/actuator</a></li>
-        <li><a href="./actuator/health">/actuator/health</a></li>
-        <li><a href="./h2-console">/h2-console</a></li>
-        <li><a href="http://localhost:5050">pgAdmin</a></li>
-        
-    </ul>
-    <p>API:</p>
-    <ul>
-        <li><a href="./api/users">/api/users</a></li>
-        <li><a href="./api/orders">/api/orders</a></li>
-        <li><a href="./api/authors">/api/authors</a></li>
-        <li><a href="./api/inventory">/api/inventory</a></li>
-        <li><a href="./api/books/summaries">/api/books/summaries</a></li>
-    </ul>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bookstore spring boot example application</title>
+    </head>
+    <body>
+        <h3>Bookstore</h3>
+        <ul>
+            <li><a href="./swagger-ui/index.html">/swagger-ui/index.html</a></li>
+            <li><a href="./actuator">/actuator</a></li>
+            <li><a href="./actuator/health">/actuator/health</a></li>
+            <li><a href="./h2-console">/h2-console</a></li>
+            <li><a href="http://localhost:5050">pgAdmin</a></li>
+            <li><a href="http://localhost:9411/zipkin/?serviceName=bookstore">Zipkin</a></li>
+
+        </ul>
+        <p>API:</p>
+        <ul>
+            <li><a href="./api/users">/api/users</a></li>
+            <li><a href="./api/orders">/api/orders</a></li>
+            <li><a href="./api/authors">/api/authors</a></li>
+            <li><a href="./api/inventory">/api/inventory</a></li>
+            <li><a href="./api/books/summaries">/api/books/summaries</a></li>
+        </ul>
+    </body>
 </html>
