example jbang spring boot jsf

--- a/jbang/spring-boot-jpa-jsf/hello.xhtml
+++ b/jbang/spring-boot-jpa-jsf/hello.xhtml
@@ -7,7 +7,7 @@
     <h:head>
         <title>Hello</title>
         <!--<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css"/>-->
-<!--        <link rel="stylesheet" href="#{resource['/_staticc/simpledotcss/2.3.1/simple.css']}"/>-->
+<!--        <link rel="stylesheet" href="#{resource['/_static/simpledotcss/2.3.1/simple.css']}"/>-->
 <!--         <link rel="stylesheet" href="#{resource['/webjars/picocss__pico/2.0.6/css/pico.classless.css']}"/> -->
         <h:outputStylesheet library="_static" name="simpledotcss/2.3.1/simple.css"/>
         <!--        <h:outputStylesheet library="webjars" name="picocss__pico/2.0.6/css/pico.classless.css"/> -->
@@ -30,7 +30,7 @@
             <p>
                 <b>#{helloBean.hello}</b>
             </p>
-            <form jsf:id="form" jsf:prependId="false">
+            <form jsf:id="form"  jsf:prependId="false">
                 <fieldset>
                     <legend>input fields</legend>
 
