added minimal css switcher

--- a/jbang/spring-boot-jpa-jsf/index-fetch.html
+++ b/jbang/spring-boot-jpa-jsf/index-fetch.html
@@ -182,5 +182,7 @@
         }
     }).mount('#app');
         </script>
+        <!-- https://github.com/dohliam/dropin-minimal-css -->
+        <!-- <script src="https://dohliam.github.io/dropin-minimal-css/switcher.js" type="text/javascript"></script> -->
     </body>
 </html>
