--- a/jbang/spring-boot-jpa-jsf/person.xhtml
+++ b/jbang/spring-boot-jpa-jsf/person.xhtml
@@ -103,5 +103,7 @@
                     document.getElementById('personDialog').close();
                 }
             </script>
+            <!-- https://github.com/dohliam/dropin-minimal-css -->
+            <!-- <script src="https://dohliam.github.io/dropin-minimal-css/switcher.js" type="text/javascript"></script> -->
         </h:body>
     </html>
