--- a/jbang/spring-boot-jpa-jsf/personRows.html
+++ b/jbang/spring-boot-jpa-jsf/personRows.html
@@ -1,10 +1,11 @@
+<!-- This is the fragment for the person rows -->
 <tbody id="persons-list" th:fragment="personRows">
     <tr th:each="person : ${persons}">
-        <td th:text="${person.firstName}"></td>
-        <td th:text="${person.lastName}"></td>
-        <td th:text="${person.birthYear}"></td>
+        <td th:text="${person.firstName}">First Name</td>
+        <td th:text="${person.lastName}">Last Name</td>
+        <td th:text="${person.birthYear}">Year of Birth</td>
         <td>
-            <button th:attr="hx-get=@{/htmx/persons/form(id=${person.id})}" hx-target="#person-dialog" hx-trigger="click">Edit</button>
+            <button th:attr="hx-get=@{/htmx/persons/form(id=${person.id},page=${currentPage})}" hx-target="#person-dialog" hx-trigger="click">Edit</button>
             <button th:attr="hx-delete=@{/api/persons/{id}(id=${person.id})}" hx-swap="none" hx-trigger="click">Delete</button>
         </td>
     </tr>
