--- a/jbang/spring-boot-jpa-jsf/index.html
+++ b/jbang/spring-boot-jpa-jsf/index.html
@@ -15,7 +15,8 @@
         <p>UI:</p>
         <ul>
             <li><a href="./person-crud-vue.html">/person-crud-vue.html</a></li>
-            <li><a href="./hello.jsf">/hello.jsf</a></li>
+            <li><a href="./person-crud-faces">/person-crud-faces</a></li>
+            
         </ul>
     </body>
 </html>
