--- a/jbang/spring-boot-jpa-jsf/index.html
+++ b/jbang/spring-boot-jpa-jsf/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="./person-crud-vue.html">/person-crud-vue.html</a></li>
             <li><a href="./person-crud-faces">/person-crud-faces</a></li>
-            
+            <li><a href="./person-crud-htmx">/person-crud-htmx</a></li>
         </ul>
     </body>
 </html>
