--- a/jbang/spring-boot-jpa-jsf/person-crud-htmx.html
+++ b/jbang/spring-boot-jpa-jsf/person-crud-htmx.html
@@ -16,7 +16,7 @@
             <h1>Person CRUD Application</h1>
         </header>
         <main>
-            <button th:attr="hx-get=@{/persons/htmx/form(page=${currentPage})}" hx-target="#person-dialog" hx-trigger="click">Add Person</button>
+            <button th:attr="hx-get=@{/person-crud-htmx/htmx/form(page=${currentPage})}" hx-target="#person-dialog" hx-trigger="click">Add Person</button>
             <table>
                 <thead>
                     <tr>
@@ -32,8 +32,8 @@
                         <td th:text="${person.lastName}">Last Name</td>
                         <td th:text="${person.birthYear}">Year of Birth</td>
                         <td>
-                            <button th:attr="hx-get=@{/persons/htmx/form(id=${person.id},page=${currentPage})}" hx-target="#person-dialog" hx-trigger="click">Edit</button>
-                            <button th:attr="hx-delete=@{/persons/htmx/{id}(id=${person.id})}" hx-swap="none" hx-trigger="click">Delete</button>
+                            <button th:attr="hx-get=@{/person-crud-htmx/htmx/form(id=${person.id},page=${currentPage})}" hx-target="#person-dialog" hx-trigger="click">Edit</button>
+                            <button th:attr="hx-delete=@{/person-crud-htmx/htmx/{id}(id=${person.id})}" hx-swap="none" hx-trigger="click">Delete</button>
                         </td>
                     </tr>
                 </tbody>
@@ -42,7 +42,7 @@
                 <ul style="display: flex; list-style: none; padding: 0;">
                     <li th:each="pageNum : ${#numbers.sequence(0, totalPages - 1)}">
                         <a href="#" th:text="${pageNum + 1}"
-                           th:attr="hx-get=@{/persons/htmx/list(page=${pageNum}, size=${size})}"
+                           th:attr="hx-get=@{/person-crud-htmx/htmx/list(page=${pageNum}, size=${size})}"
                            hx-target="#persons-list"
                            hx-swap="outerHTML"
                            hx-trigger="click"
@@ -59,8 +59,8 @@
         <dialog id="person-dialog">
             <!-- Person Form Fragment -->
             <form th:fragment="personForm(editMode, currentPage, person)"
-                  th:action="@{${editMode} ? '/persons/htmx/update' : '/persons/htmx/create'}"
-                  th:attr="hx-post=@{${editMode} ? '/persons/htmx/update' : '/persons/htmx/create'}"
+                  th:action="@{${editMode} ? '/person-crud-htmx/htmx/update' : '/person-crud-htmx/htmx/create'}"
+                  th:attr="hx-post=@{${editMode} ? '/person-crud-htmx/htmx/update' : '/person-crud-htmx/htmx/create'}"
                   hx-target="#persons-list"
                   hx-swap="outerHTML"
                   method="post">
