--- a/jbang/spring-boot-jpa-jsf/index.html
+++ b/jbang/spring-boot-jpa-jsf/index.html
@@ -8,9 +8,11 @@
     <body>
         <h3>Person CRUD Application</h3>
         <ul>
+            <li><a href="./swagger-ui/index.html">/swagger-ui/index.html</a></li>
             <li><a href="./actuator">/actuator</a></li>
             <li><a href="./actuator/health">/actuator/health</a></li>
-
+            <li><a href="./h2-console">/h2-console</a> jdbc:h2:mem:person-db;MODE=PostgreSQL;</li>
+            <li><a href="http://localhost:5050">pgAdmin</a> jdbc:postgresql://db:5432/example | u:postgres | p:pass-example | org.postgresql.Driver</li>
         </ul>
         <p>UI:</p>
         <ul>
