--- a/jbang/spring-boot-jpa-jsf/index.html
+++ b/jbang/spring-boot-jpa-jsf/index.html
@@ -6,19 +6,21 @@
         <title>spring boot with VueJS, JakartaServer Faces and Thymeleaf/HTMX</title>
     </head>
     <body>
-        <h3>Person CRUD Application</h3>
+        <h3>spring boot with VueJS, JakartaServer Faces and Thymeleaf/HTMX</h3>
+        <h4>Person CRUD Application</h4>
+
         <ul>
+            <li><a href="./person-crud-vue.html">/person-crud-vue.html</a> VueJS</li>
+            <li><a href="./person-crud-faces">/person-crud-faces</a> JakartaServer Faces</li>
+            <li><a href="./person-crud-htmx">/person-crud-htmx</a> Thymeleaf/HTMX</li>
+        </ul>
+        <p>common</p>
+         <ul>
             <li><a href="./swagger-ui/index.html">/swagger-ui/index.html</a></li>
             <li><a href="./actuator">/actuator</a></li>
             <li><a href="./actuator/health">/actuator/health</a></li>
             <li><a href="./h2-console">/h2-console</a> jdbc:h2:mem:person-db;MODE=PostgreSQL;</li>
             <li><a href="http://localhost:5050">pgAdmin</a> jdbc:postgresql://db:5432/example | u:postgres | p:pass-example | org.postgresql.Driver</li>
-        </ul>
-        <p>UI:</p>
-        <ul>
-            <li><a href="./person-crud-vue.html">/person-crud-vue.html</a></li>
-            <li><a href="./person-crud-faces">/person-crud-faces</a></li>
-            <li><a href="./person-crud-htmx">/person-crud-htmx</a></li>
         </ul>
     </body>
 </html>
