--- a/jbang/spring-boot-jpa-jsf/person-crud-vue.html
+++ b/jbang/spring-boot-jpa-jsf/person-crud-vue.html
@@ -3,8 +3,10 @@
     <head>
         <title>Person CRUD Application</title>
         <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+        <!-- <link rel="stylesheet" th:href="@{_static/simpledotcss/2.3.1/simple.css}" /> -->
         <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css" />-->
-        <script src="https://cdn.jsdelivr.net/npm/vue@3.4.21/dist/vue.global.prod.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@3.4.27/dist/vue.global.prod.js"></script>
+        <!-- <script th:src="@{webjars/vue/3.4.27/dist/vue.global.prod.js}"></script> -->
         <style>
             button + button {
                 margin-left: 10px;
