--- a/jbang/spring-boot-compare/person-crud-htmx.html
+++ b/jbang/spring-boot-compare/person-crud-htmx.html
@@ -35,7 +35,7 @@
                         <td th:text="${person.birthYear}">Year of Birth</td>
                         <td>
                             <button th:attr="hx-get=@{/person-crud-htmx/htmx/form(id=${person.id},page=${currentPage})}" hx-target="#person-dialog" hx-trigger="click">Edit</button>
-                            <button th:attr="hx-delete=@{/person-crud-htmx/htmx/{id}(id=${person.id})}" hx-swap="none" hx-trigger="click">Delete</button>
+                            <button th:attr="hx-delete=@{/person-crud-htmx/htmx/{id}(id=${person.id})}" hx-target="#persons-list" hx-swap="outerHTML" hx-trigger="click">Delete</button>
                         </td>
                     </tr>
                 </tbody>
